# qemu-geniezone

./: .gitignore  AGENTS.md  README.en.rst  README.rst  ROADMAP.md  make.sh  meson.build  meson_options.txt  opencode.jsonc
.github/workflows/: 1.sh  build.yml
accel/: Kconfig  accel-irq.c  meson.build
accel/gzvm/: gzvm-accel-ops.c  gzvm-internal.h  gzvm-ioctl.c  gzvm-irq.c  gzvm-mem.c  gzvm-mmio.c  gzvm-signal.c  gzvm-vcpu.c  gzvm-vm-start.c  gzvm.c  meson.build  trace-events  trace.h
accel/stubs/: gzvm-stub.c  meson.build
configs/targets/: aarch64-softmmu.mak
hw/arm/: Kconfig  boot.c  meson.build  virt-gzvm.c  virt.c
hw/intc/: Kconfig  arm_gicv3_common.c  arm_gicv3_gzvm.c  meson.build  trace-events
hw/vfio/: pci.c
include/hw/arm/: virt-gzvm.h  virt.h
include/system/: accel-irq.h  gzvm.h  gzvm_int.h  hw_accel.h
linux-headers/linux/: gzvm.h
pc-bios/s390-ccw/: cio.c
pyvenv/: meson.build
roms/edk2/SecurityPkg/DeviceSecurity/SpdmLib/libspdm/os_stub/openssllib/openssl/pyca-cryptography/vectors/cryptography_vectors/x509/PKITS_data/smime/: SignedAnyPolicyTest14.eml:OECustomProperty  SignedDifferentPoliciesTest12.eml:OECustomProperty  SignedDifferentPoliciesTest3.eml:OECustomProperty  SignedDifferentPoliciesTest4.eml:OECustomProperty  SignedInvalidCASignatureTest2.eml:OECustomProperty  SignedInvalidDSASignatureTest6.eml:OECustomProperty  SignedInvalidRevokedCATest2.eml:OECustomProperty  (+13 more)
scripts/: meson-buildoptions.sh
tests/: test_invariant_cio.c
ui/: vnc.c
util/: android15-pthread-affinity.c  meson.build  oslib-posix.c
